--- a/notebooks/02_Hungarian_Chickenpox_Data_Wrangling.ipynb
+++ b/notebooks/02_Hungarian_Chickenpox_Data_Wrangling.ipynb
@@ -2643,7 +2643,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "6afbe9dc",
+   "id": "b7ddf28a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2660,7 +2660,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "402bc727",
+   "id": "b4b03a4d",
    "metadata": {
     "scrolled": true
    },
@@ -2797,7 +2797,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "43668a13",
+   "id": "90abedd5",
    "metadata": {
     "scrolled": true
    },
@@ -2853,7 +2853,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "6321a106",
+   "id": "62bfd8ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2913,402 +2913,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "f1e9a013",
+   "execution_count": 63,
+   "id": "13842be3",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>County</th>\n",
-       "      <th>Cases</th>\n",
-       "      <th>Area_km</th>\n",
-       "      <th>Perm_pop</th>\n",
-       "      <th>Live-births</th>\n",
-       "      <th>Infant_deaths</th>\n",
-       "      <th>Children</th>\n",
-       "      <th>Internal_immigration</th>\n",
-       "      <th>...</th>\n",
-       "      <th>HH_hot_water_net</th>\n",
-       "      <th>HH_trash_serv</th>\n",
-       "      <th>Num_general_pract</th>\n",
-       "      <th>Num_pediatrican</th>\n",
-       "      <th>GP_Nurses</th>\n",
-       "      <th>Hospital_Beds</th>\n",
-       "      <th>Gyno_ped_nurses</th>\n",
-       "      <th>Pharmacies</th>\n",
-       "      <th>Branch_pharmacies</th>\n",
-       "      <th>Job_seekers</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2005-01-03</td>\n",
-       "      <td>2005</td>\n",
-       "      <td>BEKES</td>\n",
-       "      <td>173</td>\n",
-       "      <td>5629.69</td>\n",
-       "      <td>391579.0</td>\n",
-       "      <td>3287.0</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>57958.0</td>\n",
-       "      <td>14623.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>31532.0</td>\n",
-       "      <td>160651.0</td>\n",
-       "      <td>226.0</td>\n",
-       "      <td>71.0</td>\n",
-       "      <td>244.0</td>\n",
-       "      <td>3346.0</td>\n",
-       "      <td>220.5</td>\n",
-       "      <td>96.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>17384.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2005-01-10</td>\n",
-       "      <td>2005</td>\n",
-       "      <td>BEKES</td>\n",
-       "      <td>92</td>\n",
-       "      <td>5629.69</td>\n",
-       "      <td>391579.0</td>\n",
-       "      <td>3287.0</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>57958.0</td>\n",
-       "      <td>14623.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>31532.0</td>\n",
-       "      <td>160651.0</td>\n",
-       "      <td>226.0</td>\n",
-       "      <td>71.0</td>\n",
-       "      <td>244.0</td>\n",
-       "      <td>3346.0</td>\n",
-       "      <td>220.5</td>\n",
-       "      <td>96.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>17384.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2005-01-17</td>\n",
-       "      <td>2005</td>\n",
-       "      <td>BEKES</td>\n",
-       "      <td>86</td>\n",
-       "      <td>5629.69</td>\n",
-       "      <td>391579.0</td>\n",
-       "      <td>3287.0</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>57958.0</td>\n",
-       "      <td>14623.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>31532.0</td>\n",
-       "      <td>160651.0</td>\n",
-       "      <td>226.0</td>\n",
-       "      <td>71.0</td>\n",
-       "      <td>244.0</td>\n",
-       "      <td>3346.0</td>\n",
-       "      <td>220.5</td>\n",
-       "      <td>96.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>17384.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2005-01-24</td>\n",
-       "      <td>2005</td>\n",
-       "      <td>BEKES</td>\n",
-       "      <td>126</td>\n",
-       "      <td>5629.69</td>\n",
-       "      <td>391579.0</td>\n",
-       "      <td>3287.0</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>57958.0</td>\n",
-       "      <td>14623.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>31532.0</td>\n",
-       "      <td>160651.0</td>\n",
-       "      <td>226.0</td>\n",
-       "      <td>71.0</td>\n",
-       "      <td>244.0</td>\n",
-       "      <td>3346.0</td>\n",
-       "      <td>220.5</td>\n",
-       "      <td>96.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>17384.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2005-01-31</td>\n",
-       "      <td>2005</td>\n",
-       "      <td>BEKES</td>\n",
-       "      <td>87</td>\n",
-       "      <td>5629.69</td>\n",
-       "      <td>391579.0</td>\n",
-       "      <td>3287.0</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>57958.0</td>\n",
-       "      <td>14623.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>31532.0</td>\n",
-       "      <td>160651.0</td>\n",
-       "      <td>226.0</td>\n",
-       "      <td>71.0</td>\n",
-       "      <td>244.0</td>\n",
-       "      <td>3346.0</td>\n",
-       "      <td>220.5</td>\n",
-       "      <td>96.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>17384.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>517</th>\n",
-       "      <td>2014-12-01</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>BEKES</td>\n",
-       "      <td>6</td>\n",
-       "      <td>5629.69</td>\n",
-       "      <td>363085.0</td>\n",
-       "      <td>2797.0</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>47071.0</td>\n",
-       "      <td>15279.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>31627.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>223.0</td>\n",
-       "      <td>69.0</td>\n",
-       "      <td>254.0</td>\n",
-       "      <td>3020.0</td>\n",
-       "      <td>211.5</td>\n",
-       "      <td>116.0</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>13237.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>518</th>\n",
-       "      <td>2014-12-08</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>BEKES</td>\n",
-       "      <td>10</td>\n",
-       "      <td>5629.69</td>\n",
-       "      <td>363085.0</td>\n",
-       "      <td>2797.0</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>47071.0</td>\n",
-       "      <td>15279.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>31627.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>223.0</td>\n",
-       "      <td>69.0</td>\n",
-       "      <td>254.0</td>\n",
-       "      <td>3020.0</td>\n",
-       "      <td>211.5</td>\n",
-       "      <td>116.0</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>13237.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>519</th>\n",
-       "      <td>2014-12-15</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>BEKES</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5629.69</td>\n",
-       "      <td>363085.0</td>\n",
-       "      <td>2797.0</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>47071.0</td>\n",
-       "      <td>15279.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>31627.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>223.0</td>\n",
-       "      <td>69.0</td>\n",
-       "      <td>254.0</td>\n",
-       "      <td>3020.0</td>\n",
-       "      <td>211.5</td>\n",
-       "      <td>116.0</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>13237.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>520</th>\n",
-       "      <td>2014-12-22</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>BEKES</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5629.69</td>\n",
-       "      <td>363085.0</td>\n",
-       "      <td>2797.0</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>47071.0</td>\n",
-       "      <td>15279.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>31627.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>223.0</td>\n",
-       "      <td>69.0</td>\n",
-       "      <td>254.0</td>\n",
-       "      <td>3020.0</td>\n",
-       "      <td>211.5</td>\n",
-       "      <td>116.0</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>13237.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>521</th>\n",
-       "      <td>2014-12-29</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>BEKES</td>\n",
-       "      <td>32</td>\n",
-       "      <td>5629.69</td>\n",
-       "      <td>363085.0</td>\n",
-       "      <td>2797.0</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>47071.0</td>\n",
-       "      <td>15279.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>31627.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>223.0</td>\n",
-       "      <td>69.0</td>\n",
-       "      <td>254.0</td>\n",
-       "      <td>3020.0</td>\n",
-       "      <td>211.5</td>\n",
-       "      <td>116.0</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>13237.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>522 rows × 116 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          Date  Year County  Cases  Area_km  Perm_pop  Live-births  \\\n",
-       "0   2005-01-03  2005  BEKES    173  5629.69  391579.0       3287.0   \n",
-       "1   2005-01-10  2005  BEKES     92  5629.69  391579.0       3287.0   \n",
-       "2   2005-01-17  2005  BEKES     86  5629.69  391579.0       3287.0   \n",
-       "3   2005-01-24  2005  BEKES    126  5629.69  391579.0       3287.0   \n",
-       "4   2005-01-31  2005  BEKES     87  5629.69  391579.0       3287.0   \n",
-       "..         ...   ...    ...    ...      ...       ...          ...   \n",
-       "517 2014-12-01  2014  BEKES      6  5629.69  363085.0       2797.0   \n",
-       "518 2014-12-08  2014  BEKES     10  5629.69  363085.0       2797.0   \n",
-       "519 2014-12-15  2014  BEKES      0  5629.69  363085.0       2797.0   \n",
-       "520 2014-12-22  2014  BEKES      0  5629.69  363085.0       2797.0   \n",
-       "521 2014-12-29  2014  BEKES     32  5629.69  363085.0       2797.0   \n",
-       "\n",
-       "     Infant_deaths  Children  Internal_immigration  ...  HH_hot_water_net  \\\n",
-       "0             27.0   57958.0               14623.0  ...           31532.0   \n",
-       "1             27.0   57958.0               14623.0  ...           31532.0   \n",
-       "2             27.0   57958.0               14623.0  ...           31532.0   \n",
-       "3             27.0   57958.0               14623.0  ...           31532.0   \n",
-       "4             27.0   57958.0               14623.0  ...           31532.0   \n",
-       "..             ...       ...                   ...  ...               ...   \n",
-       "517           21.0   47071.0               15279.0  ...           31627.0   \n",
-       "518           21.0   47071.0               15279.0  ...           31627.0   \n",
-       "519           21.0   47071.0               15279.0  ...           31627.0   \n",
-       "520           21.0   47071.0               15279.0  ...           31627.0   \n",
-       "521           21.0   47071.0               15279.0  ...           31627.0   \n",
-       "\n",
-       "     HH_trash_serv  Num_general_pract  Num_pediatrican  GP_Nurses  \\\n",
-       "0         160651.0              226.0             71.0      244.0   \n",
-       "1         160651.0              226.0             71.0      244.0   \n",
-       "2         160651.0              226.0             71.0      244.0   \n",
-       "3         160651.0              226.0             71.0      244.0   \n",
-       "4         160651.0              226.0             71.0      244.0   \n",
-       "..             ...                ...              ...        ...   \n",
-       "517            0.0              223.0             69.0      254.0   \n",
-       "518            0.0              223.0             69.0      254.0   \n",
-       "519            0.0              223.0             69.0      254.0   \n",
-       "520            0.0              223.0             69.0      254.0   \n",
-       "521            0.0              223.0             69.0      254.0   \n",
-       "\n",
-       "     Hospital_Beds  Gyno_ped_nurses  Pharmacies  Branch_pharmacies  \\\n",
-       "0           3346.0            220.5        96.0               14.0   \n",
-       "1           3346.0            220.5        96.0               14.0   \n",
-       "2           3346.0            220.5        96.0               14.0   \n",
-       "3           3346.0            220.5        96.0               14.0   \n",
-       "4           3346.0            220.5        96.0               14.0   \n",
-       "..             ...              ...         ...                ...   \n",
-       "517         3020.0            211.5       116.0               17.0   \n",
-       "518         3020.0            211.5       116.0               17.0   \n",
-       "519         3020.0            211.5       116.0               17.0   \n",
-       "520         3020.0            211.5       116.0               17.0   \n",
-       "521         3020.0            211.5       116.0               17.0   \n",
-       "\n",
-       "     Job_seekers  \n",
-       "0        17384.0  \n",
-       "1        17384.0  \n",
-       "2        17384.0  \n",
-       "3        17384.0  \n",
-       "4        17384.0  \n",
-       "..           ...  \n",
-       "517      13237.0  \n",
-       "518      13237.0  \n",
-       "519      13237.0  \n",
-       "520      13237.0  \n",
-       "521      13237.0  \n",
-       "\n",
-       "[522 rows x 116 columns]"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "target_county('BEKES')"
+    "TestC=target_county('BEKES')"
    ]
   },
   {
@@ -3348,22 +2960,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "43591f07",
+   "execution_count": 64,
+   "id": "fe8fb915",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'TestC' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-62-c4c6a521ebd6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mFile_Location\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'data/interim/targeted_counties_chichenpox_data.csv'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mfull_path\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mProject_Local\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mFile_Location\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mTestC\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfull_path\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'TestC' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# save targeted county datadata to csv file in data folder\n",
     "File_Location = 'data/interim/targeted_counties_chichenpox_data.csv'\n",
