--- a/notebooks/02_Hungarian_Chickenpox_Data_Wrangling.ipynb
+++ b/notebooks/02_Hungarian_Chickenpox_Data_Wrangling.ipynb
@@ -2643,7 +2643,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "b7ddf28a",
+   "id": "e53d8061",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2660,7 +2660,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "b4b03a4d",
+   "id": "2c3e503e",
    "metadata": {
     "scrolled": true
    },
@@ -2797,7 +2797,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "90abedd5",
+   "id": "5c185ec1",
    "metadata": {
     "scrolled": true
    },
@@ -2852,8 +2852,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "62bfd8ab",
+   "execution_count": 116,
+   "id": "2d035f99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2887,34 +2887,64 @@
     "    if Counter == 1:\n",
     "        TestC = County0\n",
     "    if Counter == 2:\n",
-    "        TestC = pd.concat([County0.reset_index(drop=True),County1.reset_index(drop=True)], axis=1)\n",
+    "#        TestC = pd.concat([County0.reset_index(drop=True),County1.reset_index(drop=True)], axis=1)\n",
+    "        TestC= County0.merge(County1, how='left', on=['Date','Year'],suffixes=('_C0', '_C1'))\n",
     "    if Counter == 3:\n",
-    "        TestC = pd.concat([County0.reset_index(drop=True),County1.reset_index(drop=True),County2.reset_index(drop=True)], axis=1)\n",
+    "#        TestC = pd.concat([County0.reset_index(drop=True),County1.reset_index(drop=True),County2.reset_index(drop=True)], axis=1)\n",
+    "        TestC1= County0.merge(County1, how='left', on=['Date','Year'],suffixes=('_C0', '_C1'))\n",
+    "        TestC = TestC1.merge(County2, how='left', on =['Date','Year'])\n",
+    "        TestC.rename(columns = {'County':'County_C2', 'Cases':'Cases_C2', 'Area_km':'Area_km_C2', 'Perm_pop':'Perm_pop_C2',\n",
+    "              'Live-births':'Live-births_C2', 'Infant_deaths': 'Infant_deaths_C2','Children': 'Children_C2',\n",
+    "              'Internal_immigration': 'Internal_immigration_C2', 'Internal_emmigration': 'Internal_emmigration_C2',\n",
+    "              'Dwellings': 'Dwellings_C2', 'Street_taps':'Street_taps_C2', 'HH_water_net' : 'HH_water_net_C2', 'HH_water_net_CY': 'HH_water_net_CY_C2',\n",
+    "              'HH_sewer_net':'HH_sewer_net_C2','HH_electric_net':'HH_electric_net_C2', 'HH_gas_net':'HH_gas_net_C2','HH_dist_heat_net':'HH_dist_heat_net_C2',\n",
+    "              'HH_hot_water_net': 'HH_hot_water_net_C2','HH_trash_serv':'HH_trash_serv_C2','Num_general_pract':'Num_general_pract_C2',\n",
+    "              'Num_pediatrican':'Num_pediatrican_C2','GP_Nurses':'GP_Nurses_C2','Hospital_beds':'Hospital_beds_C2','Gyno_ped_nurses':'Gyno_ped_nurses_C2',\n",
+    "              'Pharmacies':'Pharmacies_C2','Branch_pharmacies': 'Branch_pharmacies_C2','Job_seekers':'Job_seekers_C2'}, inplace = True)\n",
     "    if Counter == 4:\n",
-    "        TestC = pd.concat([County0.reset_index(drop=True),County1.reset_index(drop=True),County2.reset_index(drop=True)\n",
-    "                ,County3.reset_index(drop=True)], axis=1)\n",
-    "    if Counter == 5:\n",
-    "        TestC = pd.concat([County0.reset_index(drop=True),County1.reset_index(drop=True),County2.reset_index(drop=True)\n",
-    "                ,County3.reset_index(drop=True),County4.reset_index(drop=True)], axis=1)\n",
-    "    if Counter == 6:\n",
-    "        TestC = pd.concat([County0.reset_index(drop=True),County1.reset_index(drop=True),County2.reset_index(drop=True)\n",
-    "                ,County3.reset_index(drop=True),County4.reset_index(drop=True),County5.reset_index(drop=True)], axis=1) \n",
-    "    if Counter == 7:\n",
-    "        TestC = pd.concat([County0.reset_index(drop=True),County1.reset_index(drop=True),County2.reset_index(drop=True)\n",
-    "                ,County3.reset_index(drop=True),County4.reset_index(drop=True),County5.reset_index(drop=True)\n",
-    "                ,County6.reset_index(drop=True)], axis=1) \n",
-    "    if Counter == 8:\n",
-    "        TestC = pd.concat([County0.reset_index(drop=True),County1.reset_index(drop=True),County2.reset_index(drop=True)\n",
-    "                ,County3.reset_index(drop=True),County4.reset_index(drop=True),County5.reset_index(drop=True)\n",
-    "                ,County6.reset_index(drop=True),County7.reset_index(drop=True)], axis=1) \n",
+    "#        TestC = pd.concat([County0.reset_index(drop=True),County1.reset_index(drop=True),County2.reset_index(drop=True)\n",
+    "#                ,County3.reset_index(drop=True)], axis=1)\n",
+    "        TestC1= County0.merge(County1, how='left', on=['Date','Year'],suffixes=('_C0', '_C1'))\n",
+    "        TestC2 = TestC1.merge(County2, how='left', on =['Date','Year'])\n",
+    "        TestC2.rename(columns = {'County':'County_C2', 'Cases':'Cases_C2', 'Area_km':'Area_km_C2', 'Perm_pop':'Perm_pop_C2',\n",
+    "              'Live-births':'Live-births_C2', 'Infant_deaths': 'Infant_deaths_C2','Children': 'Children_C2',\n",
+    "              'Internal_immigration': 'Internal_immigration_C2', 'Internal_emmigration': 'Internal_emmigration_C2',\n",
+    "              'Dwellings': 'Dwellings_C2', 'Street_taps':'Street_taps_C2', 'HH_water_net' : 'HH_water_net_C2', 'HH_water_net_CY': 'HH_water_net_CY_C2',\n",
+    "              'HH_sewer_net':'HH_sewer_net_C2','HH_electric_net':'HH_electric_net_C2', 'HH_gas_net':'HH_gas_net_C2','HH_dist_heat_net':'HH_dist_heat_net_C2',\n",
+    "              'HH_hot_water_net': 'HH_hot_water_net_C2','HH_trash_serv':'HH_trash_serv_C2','Num_general_pract':'Num_general_pract_C2',\n",
+    "              'Num_pediatrican':'Num_pediatrican_C2','GP_Nurses':'GP_Nurses_C2','Hospital_beds':'Hospital_beds_C2','Gyno_ped_nurses':'Gyno_ped_nurses_C2',\n",
+    "              'Pharmacies':'Pharmacies_C2','Branch_pharmacies': 'Branch_pharmacies_C2','Job_seekers':'Job_seekers_C2'}, inplace = True)\n",
+    "        TestC = TestC2.merge(County3, how='left', on =['Date','Year'])\n",
+    "        TestC.rename(columns = {'County':'County_C3', 'Cases':'Cases_C3', 'Area_km':'Area_km_C3', 'Perm_pop':'Perm_pop_C3',\n",
+    "              'Live-births':'Live-births_C3', 'Infant_deaths': 'Infant_deaths_C3','Children': 'Children_C3',\n",
+    "              'Internal_immigration': 'Internal_immigration_C3', 'Internal_emmigration': 'Internal_emmigration_C3',\n",
+    "              'Dwellings': 'Dwellings_C3', 'Street_taps':'Street_taps_C3', 'HH_water_net' : 'HH_water_net_C3', 'HH_water_net_CY': 'HH_water_net_CY_C3',\n",
+    "              'HH_sewer_net':'HH_sewer_net_C3','HH_electric_net':'HH_electric_net_C3', 'HH_gas_net':'HH_gas_net_C3','HH_dist_heat_net':'HH_dist_heat_net_C3',\n",
+    "              'HH_hot_water_net': 'HH_hot_water_net_C3','HH_trash_serv':'HH_trash_serv_C3','Num_general_pract':'Num_general_pract_C3',\n",
+    "              'Num_pediatrican':'Num_pediatrican_C3','GP_Nurses':'GP_Nurses_C3','Hospital_beds':'Hospital_beds_C3','Gyno_ped_nurses':'Gyno_ped_nurses_C3',\n",
+    "              'Pharmacies':'Pharmacies_C3','Branch_pharmacies': 'Branch_pharmacies_C3','Job_seekers':'Job_seekers_C3'}, inplace = True)\n",
+    "#    if Counter == 5:\n",
+    "#        TestC = pd.concat([County0.reset_index(drop=True),County1.reset_index(drop=True),County2.reset_index(drop=True)\n",
+    "#                ,County3.reset_index(drop=True),County4.reset_index(drop=True)], inplace= True)\n",
+    "#    if Counter == 6:\n",
+    "#        TestC = pd.concat([County0.reset_index(drop=True),County1.reset_index(drop=True),County2.reset_index(drop=True)\n",
+    "#                ,County3.reset_index(drop=True),County4.reset_index(drop=True),County5.reset_index(drop=True)], axis=1) \n",
+    "#    if Counter == 7:\n",
+    "#        TestC = pd.concat([County0.reset_index(drop=True),County1.reset_index(drop=True),County2.reset_index(drop=True)\n",
+    "#                ,County3.reset_index(drop=True),County4.reset_index(drop=True),County5.reset_index(drop=True)\n",
+    "#                ,County6.reset_index(drop=True)], axis=1) \n",
+    " #   if Counter == 8:\n",
+    " #       TestC = pd.concat([County0.reset_index(drop=True),County1.reset_index(drop=True),County2.reset_index(drop=True)\n",
+    "#                ,County3.reset_index(drop=True),County4.rese't_index(drop=True),County5.reset_index(drop=True)\n",
+    "#                ,County6.reset_index(drop=True),County7.reset_index(drop=True)], axis=1) \n",
     "\n",
     "    return TestC"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "13842be3",
+   "execution_count": 119,
+   "id": "67495f8a",
    "metadata": {
     "scrolled": true
    },
@@ -2960,8 +2990,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "fe8fb915",
+   "execution_count": 120,
+   "id": "afd25207",
    "metadata": {},
    "outputs": [],
    "source": [
