Update 12 Dec 2022 22:42 CST

--- a/notebooks/02_Hungarian_Chickenpox_Data_Wrangling.ipynb
+++ b/notebooks/02_Hungarian_Chickenpox_Data_Wrangling.ipynb
@@ -169,8 +169,8 @@
     "# Assign filename: file\n",
     "#project location on local\n",
     "Project_Local ='C:/Users/Greki/Capstone_Two/'\n",
-    "File_Location='data/raw/hungary_chickenpox.csv'\n",
-    "file =Project_Local+File_Location\n",
+    "File_Location=hungary_chickenpox.csv'\n",
+    "file =Project_Local+File_Location'data/raw/\n",
     "# Load chickenpox data\n",
     "df1 = pd.read_csv(file)\n"
    ]
@@ -2643,7 +2643,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "48f213ce",
+   "id": "eed252e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2660,7 +2660,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "c2ac877f",
+   "id": "6bd11395",
    "metadata": {
     "scrolled": true
    },
@@ -2797,7 +2797,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "8ca62720",
+   "id": "f0f6779d",
    "metadata": {
     "scrolled": true
    },
@@ -2853,7 +2853,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "6d7c5614",
+   "id": "4affa930",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2887,11 +2887,11 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "8f71f8be",
+   "id": "7ca354f4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Remove mebers that are accounted for in calculations\n",
+    "#Remove members that are accounted for in calculations\n",
     "df6_final_mod.drop(['Area_km',   'Perm_pop',  'Live-births','Infant_deaths', 'Children','Internal_immigration','Internal_emmigration','Dwellings', 'Street_taps','HH_water_net', 'HH_water_net_CY',\n",
     "'HH_sewer_net','HH_electric_net', 'HH_gas_net', 'HH_dist_heat_net','HH_hot_water_net','HH_trash_serv','Num_general_pract','Num_pediatrican',\n",
     "'GP_Nurses', 'Hospital_Beds', 'Gyno_ped_nurses', 'Pharmacies' , 'Branch_pharmacies' ,'Job_seekers'], axis =1, inplace=True)                \n"
@@ -2900,7 +2900,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "f275619f",
+   "id": "660b1cae",
    "metadata": {},
    "outputs": [
     {
@@ -2999,7 +2999,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "ee241f3a",
+   "id": "758e3064",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3243,7 +3243,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "b80b6bfb",
+   "id": "0b0f3093",
    "metadata": {
     "scrolled": true
    },
@@ -3290,7 +3290,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "a6318c3a",
+   "id": "c24d5428",
    "metadata": {},
    "outputs": [],
    "source": [
